Review comments and one more test